--- a/Workspace/pointMgr6(ArrayList)/.project
+++ b/Workspace/pointMgr6(ArrayList)/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>pointMgr5</name>
+	<name>pointMgr6(ArrayList)</name>
 	<comment></comment>
 	<projects>
 	</projects>
